[gd_scene load_steps=7 format=2]

[ext_resource path="res://GameObject/EnemyCore/Core/EnemyCore.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Image/Enemy/test-moving-enemy.png" type="Texture" id=2]
[ext_resource path="res://GameObject/EnemyTurret/EnemyTurret.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameObject/EnemyCore/test-moving-enemy.gd" type="Script" id=4]
[ext_resource path="res://GameObject/EnemyProjectile/EnemyBullet.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="test-moving-enemy" instance=ExtResource( 1 )]
script = ExtResource( 4 )
base_hp = 240.0
base_atk = 30.0
base_def = 5.0
experience = 50
credits_base = 40
credits_drop_chance = 1.0
credits_drop_count = 12
debris_count = 8
debris_damage = 12
death_sound = 1

[node name="EnemyTurret" parent="." index="0" instance=ExtResource( 3 )]
enemy_obj = ExtResource( 5 )

[node name="BulletBehavior" parent="." index="1"]
active = true
speed = 0.0
gravity = 75.0
max_fall_speed = 30.0

[node name="LevelBulletBhv" parent="." index="2"]
active = false

[node name="Sprite" parent="." index="3"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" parent="Hitbox/Area2D" index="0"]
shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="." index="6"]
wait_time = 1.4
autostart = true
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
